--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,12 +42,74 @@
     to steadily increase every variable over time if progression is achieved.</string>
 
 
-    <string-array name="bm1000_benchmarks">
-        <item>Test benchmark program and long ass text to see where it goes, goes, goes goes goes goes</item> <!-- Benchmark Description -->
-        <item>6,6,7,3,3,150,360</item> <!-- time controls -->
-        <item>1,1,2,2,3,3,4,4,5,5,6,6</item> <!-- hold numbers -->
-        <item>1,1,2,2,3,3,4,4,5,5,6,6</item> <!-- grip types -->
+    <string-array name="zlag_benchmarks">
+        <item>5B Benchmark for repeaters. Only Jugs (hold 1)</item>
+        <item>3,6,7,3,3,150,300</item>
+        <item>1,1,1,6,1,4</item>
+        <item>1,1,1,1,1,1</item>
 
+        <item>6A Benchmark repeaters for basic grips</item>
+        <item>6,6,7,3,2,150,300</item>
+        <item>1,6,1,4,4,4,4,6,1,4,1,6</item>
+        <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6A+ Benchmark repeaters for basic grips</item>
+        <item>6,6,7,3,2,140,300</item>
+        <item>1,2,4,4,4,4,4,6,1,4,1,6</item>
+        <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6B Benchmark repeaters for basic grips</item>
+        <item>6,6,7,3,2,140,300</item>
+        <item>4,6,4,4,4,11,6,7,4,4,4,4</item>
+        <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6B+ Benchmark repeaters for basic grips</item>
+        <item>6,6,7,3,2,130,300</item>
+        <item>4,6,4,4,4,11,6,7,4,4,4,4</item>
+        <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6C Benchmark repeaters, first 20mm hold</item>
+        <item>6,6,7,3,2,130,300</item>
+        <item>7,7,7,11,4,11,4,4,6,4,4,4</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3</item>
+
+        <item>6C+ Benchmark repeaters for basic grips</item>
+        <item>6,6,7,3,2,120,300</item>
+        <item>7,7,2,11,4,11,4,4,6,4,4,4</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3</item>
+
+        <item>7A Benchmark repeaters, first slopers</item>
+        <item>6,6,7,3,2,120,300</item>
+        <item>7,15,2,2,5,4,6,5,6,7,4,6</item>
+        <item>1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>7A+ Benchmark repeaters,</item>
+        <item>6,6,7,3,2,110,300</item>
+        <item>2,15,2,2,5,4,6,2,6,7,4,6</item>
+        <item>1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>7B Benchmark repeaters, first two finger pockets</item>
+        <item>6,6,7,3,2,110,300</item>
+        <item>7,12,2,15,4,15,6,7,5,5,9,9</item>
+        <item>1,1,1,1,2,2,2,2,3,3,5,5</item>
+
+        <item>7C Benchmark repeaters</item>
+        <item>6,6,7,3,2,100,300</item>
+        <item>12,12,15,12,5,15,7,15,30,30,30,15</item>
+        <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
+
+        <item>7C+ Benchmark repeaters</item>
+        <item>6,6,7,3,2,90,300</item>
+        <item>12,12,5,15,7,15,30,30,30,15,9,9</item>
+        <item>1,1,2,2,3,3,4,4,5,5,6,6</item>
+
+        <item>8A Benchmark repeaters, intro to mono pocket</item>
+        <item>6,6,7,3,2,90,300</item>
+        <item>12,12,12,2,12,15,9,14,14,14,13,13</item>
+        <item>1,1,2,2,3,3,4,4,5,5,8,8</item>
+    </string-array>
+
+    <string-array name="bm1000_benchmarks">
         <item>5B Benchmark for repeaters. Only four finger grip</item>
         <item>3,6,7,3,3,150,300</item>
         <item>6,6,3,3,3,6</item>
@@ -203,7 +265,7 @@
         <item>2,2,11,11,5,11,9,9,9,13,8,8</item>
         <item>1,1,2,2,3,3,4,4,5,5,6,6</item>
 
-        <item>8A Benchmark repeaters for wide range of grips</item>
+        <item>8A Benchmark repeaters, get a feel of the mean 45deg sloper</item>
         <item>12,6,7,3,1,90,1</item>
         <item>11,11,2,1,15,1,11,2,5,11,11,15,11,11,9,13,14,8,13,13,8,9,7,7</item>
         <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3,4,4,5,5,5,5,6,6,8,8,</item>
@@ -214,6 +276,30 @@
         <item>1,1,5,2,11,2,9,13,14,13,9,9,12,7,12,12,7,7,7,7</item>
         <item>1,1,2,2,3,3,4,4,5,5,6,6,7,7,8,8,9,9,10,10</item>
 
+    </string-array>
+
+    <string-array name="trans_benchmarks">
+        <item>5B Benchmark for repeaters. Only four finger grip</item>
+        <item>3,6,7,3,3,150,300</item>
+        <item>1,1,1,6,1,4</item>
+        <item>1,1,1,1,1,1</item>
+
+        <item>6A Benchmark repeaters for basic grips</item>
+        <item>6,6,7,3,2,150,300</item>
+        <item>1,6,1,4,4,4,4,6,1,4,1,6</item>
+        <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
+    </string-array>
+
+    <string-array name="tension_benchmarks">
+        <item>5B Benchmark for repeaters. Only four finger grip</item>
+        <item>3,6,7,3,3,150,300</item>
+        <item>1,1,1,6,1,4</item>
+        <item>1,1,1,1,1,1</item>
+
+        <item>6A Benchmark repeaters for basic grips</item>
+        <item>6,6,7,3,2,150,300</item>
+        <item>1,6,1,4,4,4,4,6,1,4,1,6</item>
+        <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
     </string-array>
 
     <string-array name="noBenchmarks">
