--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,59 +48,64 @@
         <item>1,1,1,6,1,4</item>
         <item>1,1,1,1,1,1</item>
 
-        <item>6A Benchmark repeaters for basic grips</item>
+        <item>6A Benchmark for repeaters, intro to three finger grips</item>
         <item>6,6,7,3,2,150,300</item>
         <item>1,6,1,4,4,4,4,6,1,4,1,6</item>
         <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
 
-        <item>6A+ Benchmark repeaters for basic grips</item>
+        <item>6A+ Benchmark for repeaters</item>
         <item>6,6,7,3,2,140,300</item>
         <item>1,2,4,4,4,4,4,6,1,4,1,6</item>
         <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
 
-        <item>6B Benchmark repeaters for basic grips</item>
+        <item>6B Benchmark for repeaters</item>
         <item>6,6,7,3,2,140,300</item>
         <item>4,6,4,4,4,11,6,7,4,4,4,4</item>
         <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
 
-        <item>6B+ Benchmark repeaters for basic grips</item>
+        <item>6B+ Benchmark for repeaters</item>
         <item>6,6,7,3,2,130,300</item>
         <item>4,6,4,4,4,11,6,7,4,4,4,4</item>
         <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
 
-        <item>6C Benchmark repeaters, first 20mm hold</item>
+        <item>6C Benchmark for repeaters, first 20mm hold</item>
         <item>6,6,7,3,2,130,300</item>
         <item>7,7,7,11,4,11,4,4,6,4,4,4</item>
         <item>1,1,1,1,1,1,2,2,2,2,3,3</item>
 
-        <item>6C+ Benchmark repeaters for basic grips</item>
+        <item>6C+ Benchmark for repeaters</item>
         <item>6,6,7,3,2,120,300</item>
         <item>7,7,2,11,4,11,4,4,6,4,4,4</item>
         <item>1,1,1,1,1,1,2,2,2,2,3,3</item>
 
-        <item>7A Benchmark repeaters, first slopers</item>
-        <item>6,6,7,3,2,120,300</item>
+        <item>7A Benchmark for repeaters, first slopers</item>
+        <item>6,6,7,3,2,120,240</item>
         <item>7,15,2,2,5,4,6,5,6,7,4,6</item>
         <item>1,1,1,1,2,2,2,2,3,3,3,3</item>
 
-        <item>7A+ Benchmark repeaters,</item>
-        <item>6,6,7,3,2,110,300</item>
+        <item>7A+ Benchmark for repeaters,</item>
+        <item>6,6,7,3,2,110,240</item>
         <item>2,15,2,2,5,4,6,2,6,7,4,6</item>
         <item>1,1,1,1,2,2,2,2,3,3,3,3</item>
 
-        <item>7B Benchmark repeaters, first two finger pockets</item>
-        <item>6,6,7,3,2,110,300</item>
+        <item>7B Benchmark repeaters, two finger grip is tested here</item>
+        <item>6,6,7,3,2,110,240</item>
         <item>7,12,2,15,4,15,6,7,5,5,9,9</item>
         <item>1,1,1,1,2,2,2,2,3,3,5,5</item>
 
+        <item>7B+ Benchmark repeaters, two finger grip is tested here</item>
+        <item>6,6,7,3,2,100,240</item>
+        <item>7,12,2,15,4,15,6,7,5,5,9,9</item>
+        <item>1,1,1,1,2,2,3,3,3,3,5,5</item>
+
         <item>7C Benchmark repeaters</item>
-        <item>6,6,7,3,2,100,300</item>
-        <item>12,12,15,12,5,15,7,15,30,30,30,15</item>
+        <item>6,6,7,3,2,100,180</item>
+        <item>12,12,15,12,5,15,7,15,9,9,9,14</item>
         <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
 
         <item>7C+ Benchmark repeaters</item>
-        <item>6,6,7,3,2,90,300</item>
-        <item>12,12,5,15,7,15,30,30,30,15,9,9</item>
+        <item>6,6,7,3,2,90,180</item>
+        <item>12,12,5,15,7,15,9,9,9,9,9,14</item>
         <item>1,1,2,2,3,3,4,4,5,5,6,6</item>
 
         <item>8A Benchmark repeaters, intro to mono pocket</item>
@@ -115,72 +120,72 @@
         <item>6,6,3,3,3,6</item>
         <item>1,1,1,1,1,1</item>
 
-        <item>5C Benchmark repeaters for basic grips. Intro to three finger grips</item>
+        <item>5C Benchmark for repeaters. Intro to three finger grips</item>
         <item>5,6,7,3,2,150,300</item>
         <item>6,10,6,6,3,10,8,8,8,8</item>
         <item>1,1,1,1,1,1,2,2,3,3</item>
 
-        <item>6A Benchmark repeaters for basic grips</item>
+        <item>6A Benchmark for repeaters</item>
         <item>6,6,7,3,2,150,300</item>
         <item>10,10,6,10,3,10,8,8,5,8,5,8</item>
         <item>1,1,1,1,1,1,2,2,2,2,3,3</item>
 
-        <item>6A+ Benchmark repeaters for basic grips</item>
+        <item>6A+ Benchmark for repeaters</item>
         <item>6,6,7,3,2,140,300</item>
         <item>10,10,6,10,3,10,5,8,5,8,8,6</item>
         <item>1,1,1,1,1,1,2,2,3,3,3,3</item>
 
-        <item>6B Benchmark repeaters for wide range of grips. Two finger pocket included</item>
+        <item>6B Benchmark for repeaters. Two finger pocket included</item>
         <item>6,6,7,3,2,140,300</item>
         <item>10,10,3,2,5,5,8,10,5,6,7,7</item>
         <item>1,1,1,1,2,2,2,2,3,3,5,5</item>
 
-        <item>6B+ Benchmark repeaters for wide range of grips.</item>
+        <item>6B+ Benchmark for repeaters.</item>
         <item>6,6,7,3,2,130,300</item>
         <item>10,10,3,2,5,5,8,10,5,5,7,7</item>
         <item>1,1,1,1,2,2,2,2,3,3,5,5</item>
 
-        <item>6C Benchmark repeaters for wide range of grips</item>
+        <item>6C Benchmark for repeaters</item>
         <item>6,6,7,3,2,130,300</item>
         <item>10,4,10,4,5,12,5,12,7,7,7,6</item>
         <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
 
-        <item>6C+ Benchmark repeaters for wide range of grips</item>
+        <item>6C+ Benchmark for repeaters</item>
         <item>6,6,7,3,2,120,300</item>
         <item>10,4,10,4,5,12,5,12,7,6,7,6</item>
         <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
 
-        <item>7A Benchmark repeaters for wide range of grips</item>
+        <item>7A Benchmark for repeaters</item>
         <item>6,6,7,3,2,120,240</item>
         <item>4,4,10,2,10,12,12,12,7,6,7,11</item>
         <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
 
-        <item>7A+ Benchmark repeaters for wide range of grips</item>
+        <item>7A+ Benchmark for repeaters</item>
         <item>6,6,7,3,2,110,240</item>
         <item>4,4,10,2,10,12,12,10,7,6,7,10</item>
         <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
 
-        <item>7B Benchmark repeaters for wide range of grips</item>
+        <item>7B Benchmark for repeaters</item>
         <item>6,6,7,3,2,110,240</item>
         <item>4,2,4,4,10,10,10,12,11,7,11,11</item>
         <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
 
-        <item>7B+ Benchmark repeaters for wide range of grips</item>
+        <item>7B+ Benchmark for repeaters</item>
         <item>6,6,7,3,2,100,240</item>
         <item>4,2,4,4,10,10,10,10,11,7,11,11</item>
         <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
 
-        <item>7C Benchmark repeaters for wide range of grips</item>
+        <item>7C Benchmark for repeaters</item>
         <item>6,6,7,3,2,100,180</item>
         <item>2,2,10,4,10,4,11,11,5,5,7,7</item>
         <item>1,1,2,2,3,3,4,4,5,5,6,6</item>
 
-        <item>7C+ Benchmark repeaters for wide range of grips</item>
+        <item>7C+ Benchmark for repeaters</item>
         <item>6,6,7,3,2,90,180</item>
         <item>2,2,10,4,10,4,11,11,5,10,7,7</item>
         <item>1,1,2,2,3,3,4,4,5,5,6,6</item>
 
-        <item>8A Benchmark repeaters for wide range of grips</item>
+        <item>8A Benchmark for repeaters</item>
         <item>12,6,7,3,1,90,1</item>
         <item>2,2,2,4,4,4,2,10,4,4,4,10,11,11,11,10,10,10,10,11,7,7,7,6</item>
         <item>1,1,1,1,2,2,2,2,3,3,3,3,4,4,4,4,5,5,5,5,6,6,6,6</item>
@@ -197,75 +202,75 @@
     <string-array name="bm2000_benchmarks">
         <item>5B Benchmark for repeaters</item>
         <item>3,6,7,3,3,150,300</item>
-        <item>6,6,3,3,3,6</item>
+        <item>6,10,3,3,6,10</item>
         <item>1,1,1,1,1,1</item>
 
-        <item>5C Benchmark repeaters for basic grips</item>
+        <item>5C Benchmark for repeaters</item>
         <item>5,6,7,3,2,150,300</item>
         <item>6,6,3,3,6,3,10,6,3,10</item>
         <item>1,1,1,1,1,1,1,1,1,1</item>
 
-        <item>6A Benchmark repeaters for basic grips</item>
+        <item>6A Benchmark for repeaters</item>
         <item>6,6,7,3,2,150,300</item>
         <item>10,11,6,15,3,3,6,15,4,6,4,6</item>
         <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
 
-        <item>6A+ Benchmark repeaters for basic grips</item>
+        <item>6A+ Benchmark for repeaters</item>
         <item>6,6,7,3,2,140,300</item>
         <item>10,11,6,15,3,15,6,15,4,6,4,6</item>
         <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
 
-        <item>6B Benchmark repeaters for wide range of grips</item>
+        <item>6B Benchmark for repeaters</item>
         <item>6,6,7,3,2,140,300</item>
         <item>10,11,3,11,6,15,11,3,15,6,4,6</item>
         <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
 
-        <item>6B+ Benchmark repeaters for wide range of grips</item>
+        <item>6B+ Benchmark for repeaters</item>
         <item>6,6,7,3,2,130,300</item>
         <item>10,11,3,11,6,11,11,3,15,6,4,6</item>
         <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
 
-        <item>6C Benchmark repeaters for wide range of grips</item>
+        <item>6C Benchmark for repeaters</item>
         <item>6,6,7,3,2,130,300</item>
         <item>11,11,15,11,3,2,6,3,6,15,8,8</item>
         <item>1,1,1,1,1,1,2,2,3,3,5,5</item>
 
-        <item>6C+ Benchmark repeaters for wide range of grips</item>
+        <item>6C+ Benchmark for repeaters</item>
         <item>6,6,7,3,2,120,300</item>
         <item>11,11,15,11,3,2,6,5,6,15,8,8</item>
         <item>1,1,1,1,1,1,2,2,3,3,5,5</item>
 
-        <item>7A Benchmark repeaters for wide range of grips</item>
+        <item>7A Benchmark for repeaters</item>
         <item>6,6,7,3,2,120,240</item>
         <item>6,2,15,2,6,15,4,11,8,8,8,9</item>
         <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
 
-        <item>7A+ Benchmark repeaters for wide range of grips</item>
+        <item>7A+ Benchmark for repeaters</item>
         <item>6,6,7,3,2,110,240</item>
         <item>6,2,15,2,6,11,4,11,8,8,8,9</item>
         <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
 
-        <item>7B Benchmark repeaters for wide range of grips</item>
+        <item>7B Benchmark for repeaters</item>
         <item>6,6,7,3,2,110,240</item>
         <item>11,2,15,2,5,11,4,11,8,9,8,13</item>
         <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
 
-        <item>7B+ Benchmark repeaters for wide range of grips</item>
+        <item>7B+ Benchmark for repeaters</item>
         <item>6,6,7,3,2,110,240</item>
         <item>11,2,15,2,5,11,5,11,8,9,8,13</item>
         <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
 
-        <item>7C Benchmark repeaters for wide range of grips</item>
+        <item>7C Benchmark for repeaters, index and pinky have to work together</item>
         <item>6,6,7,3,2,100,180</item>
         <item>2,2,15,11,5,11,9,9,9,13,8,8</item>
         <item>1,1,2,2,3,3,4,4,5,5,6,6</item>
 
-        <item>7C+ Benchmark repeaters for wide range of grips</item>
+        <item>7C+ Benchmark for repeaters</item>
         <item>6,6,7,3,2,90,180</item>
         <item>2,2,11,11,5,11,9,9,9,13,8,8</item>
         <item>1,1,2,2,3,3,4,4,5,5,6,6</item>
 
-        <item>8A Benchmark repeaters, get a feel of the mean 45deg sloper</item>
+        <item>8A Benchmark repeaters, including the infamous 45deg sloper</item>
         <item>12,6,7,3,1,90,1</item>
         <item>11,11,2,1,15,1,11,2,5,11,11,15,11,11,9,13,14,8,13,13,8,9,7,7</item>
         <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3,4,4,5,5,5,5,6,6,8,8,</item>
@@ -284,7 +289,7 @@
         <item>1,1,1,6,1,4</item>
         <item>1,1,1,1,1,1</item>
 
-        <item>6A Benchmark repeaters for basic grips</item>
+        <item>6A Benchmark for repeaters</item>
         <item>6,6,7,3,2,150,300</item>
         <item>1,6,1,4,4,4,4,6,1,4,1,6</item>
         <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
@@ -296,7 +301,7 @@
         <item>1,1,1,6,1,4</item>
         <item>1,1,1,1,1,1</item>
 
-        <item>6A Benchmark repeaters for basic grips</item>
+        <item>6A Benchmark for repeaters</item>
         <item>6,6,7,3,2,150,300</item>
         <item>1,6,1,4,4,4,4,6,1,4,1,6</item>
         <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
