--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -189,13 +189,26 @@
         <item>12,6,7,3,1,90,1</item>
         <item>2,2,2,4,4,4,2,10,4,4,4,10,11,11,11,10,10,10,10,11,7,7,7,6</item>
         <item>1,1,1,1,2,2,2,2,3,3,3,3,4,4,4,4,5,5,5,5,6,6,6,6</item>
+
+        <item>6C Benchmark. Master of four finger grip, every combination of four finger grip excluding Jug </item>
+        <item>20,1,10,0,1,40,1</item>
+        <item>9,6,9,3,9,10,9,4,9,2,6,6,6,3,6,10,6,4,6,2,3,3,3,10,3,4,3,2,10,10,10,4,10,2,4,4,4,2,2,2</item>
+        <item>1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1</item>
+
         <!--
 
-        <item>6B Benchmark</item>
-        <item>5,6,7,3,2,150,300</item>
-        <item></item>
-        <item></item>
--->
+               <item>7A Benchmark for mastering four finger grip, every combination of four finger grip excluding Jug </item>
+               <item>15,1,10,0,1,30,1</item>
+               <item>6,6,6,3,6,10,6,4,6,2,3,3,3,10,3,4,3,2,10,10,10,4,10,2,4,4,4,2,2,2</item>
+               <item>1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1</item>
+
+
+
+               <item>6B Benchmark</item>
+               <item>5,6,7,3,2,150,300</item>
+               <item></item>
+               <item></item>
+       -->
 
     </string-array>
 
@@ -284,7 +297,7 @@
     </string-array>
 
     <string-array name="trans_benchmarks">
-        <item>5B Benchmark for repeaters. Only four finger grip</item>
+        <item>5B Benchmark for repeaters. Four finger grip only</item>
         <item>3,6,7,3,3,150,300</item>
         <item>1,1,1,6,1,4</item>
         <item>1,1,1,1,1,1</item>
@@ -296,15 +309,48 @@
     </string-array>
 
     <string-array name="tension_benchmarks">
-        <item>5B Benchmark for repeaters. Only four finger grip</item>
+        <item>5B Benchmark for repeaters</item>
         <item>3,6,7,3,3,150,300</item>
-        <item>1,1,1,6,1,4</item>
+        <item>2,6,1,1,1,6</item>
         <item>1,1,1,1,1,1</item>
 
         <item>6A Benchmark for repeaters</item>
-        <item>6,6,7,3,2,150,300</item>
-        <item>1,6,1,4,4,4,4,6,1,4,1,6</item>
+        <item>6,6,7,3,2,140,300</item>
+        <item>2,2,4,4,4,2,4,4,2,6,4,4</item>
+        <item>1,1,1,1,1,1,1,1,1,1,1,1</item>
+
+        <item>6B Benchmark for repeaters, prepare your three finger game</item>
+        <item>6,6,7,3,2,140,300</item>
+        <item>2,2,4,4,4,2,4,4,2,6,2,6</item>
         <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6C Benchmark for repeaters</item>
+        <item>6,6,7,3,2,130,300</item>
+        <item>5,5,5,9,4,9,2,4,4,4,2,4</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3</item>
+
+        <item>7A Benchmark for repeaters</item>
+        <item>6,6,7,3,2,120,240</item>
+        <item>7,7,5,8,5,9,4,9,5,9,4,4</item>
+        <item>1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>7B Benchmark for repeaters</item>
+        <item>6,6,7,3,2,110,240</item>
+        <item>8,8,5,7,4,7,5,8,4,7,2,6</item>
+        <item>1,1,2,2,2,2,3,3,3,3,5,5</item>
+
+        <item>7C Benchmark for repeaters, index and pinky have to work together</item>
+        <item>6,6,7,3,2,100,180</item>
+        <item>7,7,7,8,7,7,9,7,2,6,2,4</item>
+        <item>2,2,2,2,3,3,3,3,4,4,5,5</item>
+<!--
+
+        <item>8A Benchmark repeaters, including the infamous 45deg sloper</item>
+        <item>12,6,7,3,1,90,1</item>
+        <item>11,11,2,1,15,1,11,2,5,11,11,15,11,11,9,13,14,8,13,13,8,9,7,7</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3,4,4,5,5,5,5,6,6,8,8,</item>
+-->
+
     </string-array>
 
     <string-array name="noBenchmarks">
