--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -286,6 +286,77 @@
     </string-array>
 
     <string-array name="bm2000_benchmarks">
+
+        <item>5C Benchmark (Single hangs)</item>
+        <item>6,1,10,0,3,50,120</item>
+        <item>10,11,11,10,6,15,15,6,6,6,6,6</item>
+        <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6A Benchmark (Single hangs)</item>
+        <item>8,1,10,0,3,50,120</item>
+        <item>3,15,15,3,11,15,15,11,4,6,6,4,6,4,4,6</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6A+ Benchmark (Single hangs)</item>
+        <item>8,1,10,0,3,45,120</item>
+        <item>3,11,11,3,11,15,15,11,4,6,6,4,6,4,4,6</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6B Benchmark (Single hangs)</item>
+        <item>7,1,10,0,3,45,100</item>
+        <item>11,11,15,2,2,15,10,11,11,10,15,6,6,15</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6B+ Benchmark (Single hangs)</item>
+        <item>7,1,10,0,3,40,100</item>
+        <item>11,11,15,2,2,15,6,11,11,6,10,11,11,10</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6C Benchmark (Single hangs)</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>11,2,2,11,2,2,11,5,5,11,4,11,11,4,8,8</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3,5,5</item>
+
+        <item>6C+ Benchmark (Single hangs)</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>11,2,2,11,2,2,11,15,15,11,4,11,11,4,8,8</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3,5,5</item>
+
+        <item>7A Benchmark (Single hangs)</item>
+        <item>12,1,10,0,2,40,80</item>
+        <item>2,2,10,1,1,10,15,11,11,15,3,11,11,3,5,11,11,5,8,8,8,9,9,8</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3,3,3,3,3,4,4,5,5,5,5</item>
+
+        <item>7A+ Benchmark (Single hangs)</item>
+        <item>12,1,10,0,2,35,80</item>
+        <item>2,2,10,1,1,10,15,11,11,15,3,11,11,3,5,11,11,5,8,8,8,9,9,8</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3,3,3,3,3,4,4,5,5,5,5</item>
+
+        <item>7B Benchmark (Single hangs)</item>
+        <item>9,1,10,0,3,35,80</item>
+        <item>2,2,11,11,11,15,15,11,8,9,9,8,8,13,13,8,8,8</item>
+        <item>1,1,2,2,3,3,3,3,4,4,4,4,5,5,5,5,6,6</item>
+
+        <item>7B+ Benchmark (Single hangs)</item>
+        <item>9,1,10,0,3,30,80</item>
+        <item>3,1,1,3,11,11,11,11,8,9,9,8,8,13,13,8,8,8</item>
+        <item>1,1,1,1,2,2,3,3,4,4,4,4,5,5,5,5,6,6</item>
+
+        <item>7C Benchmark (Single hangs)</item>
+        <item>9,1,10,0,3,30,60</item>
+        <item>2,1,1,2,11,2,2,11,11,11,9,9,13,13,8,9,9,8</item>
+        <item>1,1,1,1,2,2,2,2,3,3,4,4,5,5,6,6,6,6</item>
+
+        <item>7C+ Benchmark (Single hangs)</item>
+        <item>11,1,10,0,3,30,60</item>
+        <item>2,1,1,2,11,2,2,11,11,11,8,13,13,8,13,13,8,9,9,8,7,7</item>
+        <item>1,1,1,1,2,2,2,2,3,3,4,4,4,4,5,5,6,6,6,6,8,8</item>
+
+        <item>8A Benchmark (Single hangs)</item>
+        <item>13,1,10,0,2,30,60</item>
+        <item>1,1,2,11,11,2,2,15,15,2,13,13,13,14,14,13,9,13,13,9,7,7,7,12,12,7</item>
+        <item>1,1,2,2,2,2,3,3,3,3,4,4,5,5,5,5,6,6,6,6,7,7,8,8,8,8</item>
+
         <item>5B Benchmark for repeaters</item>
         <item>3,6,7,3,3,150,300</item>
         <item>6,10,3,3,6,10</item>
