--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,60 +44,127 @@
 
     <string-array name="zlag_benchmarks">
 
+
+        <item>5C Benchmark (Single hangs)</item>
+        <item>6,1,10,0,3,50,120</item>
+        <item>4,6,6,4,1,4,4,1,1,6,6,1</item>
+        <item>1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6A Benchmark (Single hangs)</item>
+        <item>8,1,10,0,3,50,120</item>
+        <item>4,6,6,4,4,4,4,11,11,4,4,4,4,6,6,4</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6A+ Benchmark (Single hangs)</item>
+        <item>8,1,10,0,3,45,120</item>
+        <item>4,6,6,4,4,11,11,4,6,6,4,4,4,6,6,4</item>
+        <item>1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3</item>
+
+        <item>6B Benchmark (Single hangs)</item>
+        <item>7,1,10,0,3,45,100</item>
+        <item>7,7,7,11,11,7,6,7,7,6,4,11,11,4</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6B+ Benchmark (Single hangs)</item>
+        <item>7,1,10,0,3,40,100</item>
+        <item>7,7,7,2,2,7,5,5,4,4,7,6,6,7</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6C Benchmark (Single hangs)</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>2,2,7,7,7,12,12,7,5,11,11,5,7,7,5,5</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6C+ Benchmark (Single hangs)</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>2,12,12,2,7,12,12,7,5,11,11,5,7,7,5,5</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>7A Benchmark (Single hangs)</item>
+        <item>12,1,10,0,2,40,80</item>
+        <item>12,2,2,12,2,15,15,2,15,12,12,15,4,15,15,4,7,7,5,7,7,5,9,9</item>
+        <item>1,1,1,1,1,1,1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3,5,5</item>
+
+        <item>7A+ Benchmark (Single hangs)</item>
+        <item>12,1,10,0,2,35,80</item>
+        <item>12,12,2,15,15,2,15,12,12,15,4,15,15,4,7,7,5,7,7,5,7,7,9,9</item>
+        <item>1,1,1,1,1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3,3,3,5,5</item>
+
+        <item>7B Benchmark (Single hangs)</item>
+        <item>9,1,10,0,3,35,80</item>
+        <item>12,12,12,12,5,15,15,5,7,15,15,7,9,9,9,14,14,9</item>
+        <item>1,1,1,1,2,2,2,2,3,3,3,3,4,4,5,5,5,5</item>
+
+        <item>7B+ Benchmark (Single hangs)</item>
+        <item>9,1,10,0,3,30,80</item>
+        <item>12,12,12,12,6,12,12,6,5,15,15,5,9,9,9,14,14,9</item>
+        <item>1,1,1,1,2,2,2,2,3,3,3,3,4,4,5,5,5,5</item>
+
+                <item>7C Benchmark (Single hangs)</item>
+                <item>10,1,10,0,2,30,60</item>
+                <item>12,12,2,12,12,2,15,12,12,15,9,14,14,9,14,14,9,9,13,13</item>
+                <item>1,1,2,2,2,2,3,3,3,3,4,4,4,4,5,5,6,6,8,8</item>
+
+        <item>8A Benchmark (Single hangs)</item>
+        <item>11,1,10,0,3,30,60</item>
+        <item>12,12,2,2,12,12,12,12,9,14,14,9,14,14,9,9,13,13,13,8,8,13</item>
+        <item>1,1,2,2,2,2,3,3,4,4,4,4,5,5,6,6,7,7,8,8,8,8</item>
+
+
         <item>5B Benchmark for repeaters. Only Jugs (hold 1)</item>
         <item>3,6,7,3,3,150,300</item>
         <item>1,1,1,6,1,4</item>
         <item>1,1,1,1,1,1</item>
 
         <item>6A Benchmark for repeaters, intro to three finger grips</item>
-        <item>6,6,7,3,2,150,300</item>
-        <item>1,6,1,4,4,4,4,6,1,4,1,6</item>
-        <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
+        <item>5,6,7,3,2,150,300</item>
+        <item>1,4,4,4,4,6,1,4,1,6</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
 
         <item>6A+ Benchmark for repeaters</item>
-        <item>6,6,7,3,2,140,300</item>
-        <item>1,2,4,4,4,4,4,6,1,4,1,6</item>
-        <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
+        <item>5,6,7,3,2,140,300</item>
+        <item>1,2,4,4,4,6,1,4,1,6</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
 
         <item>6B Benchmark for repeaters</item>
-        <item>6,6,7,3,2,140,300</item>
-        <item>4,6,4,4,4,11,6,7,4,4,4,4</item>
-        <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
+        <item>5,6,7,3,2,140,300</item>
+        <item>4,4,4,11,6,7,4,4,4,4</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
 
         <item>6B+ Benchmark for repeaters</item>
-        <item>6,6,7,3,2,130,300</item>
-        <item>4,6,4,4,4,11,6,7,4,4,4,4</item>
-        <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
+        <item>5,6,7,3,2,130,300</item>
+        <item>4,4,4,11,6,7,4,4,4,4</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
 
         <item>6C Benchmark for repeaters, first 20mm hold</item>
-        <item>6,6,7,3,2,130,300</item>
-        <item>7,7,7,11,4,11,4,4,6,4,4,4</item>
-        <item>1,1,1,1,1,1,2,2,2,2,3,3</item>
+        <item>5,6,7,3,2,130,300</item>
+        <item>7,7,7,11,4,4,11,4,4,4</item>
+        <item>1,1,1,1,2,2,2,2,3,3</item>
 
         <item>6C+ Benchmark for repeaters</item>
-        <item>6,6,7,3,2,120,300</item>
-        <item>7,7,2,11,4,11,4,4,6,4,4,4</item>
-        <item>1,1,1,1,1,1,2,2,2,2,3,3</item>
+        <item>5,6,7,3,2,120,300</item>
+        <item>7,7,2,11,4,4,11,4,4,4</item>
+        <item>1,1,1,1,2,2,2,2,3,3</item>
 
         <item>7A Benchmark for repeaters, first slopers</item>
-        <item>6,6,7,3,2,120,240</item>
-        <item>7,15,2,2,5,4,6,5,6,7,4,6</item>
-        <item>1,1,1,1,2,2,2,2,3,3,3,3</item>
+        <item>5,6,7,3,2,120,240</item>
+        <item>7,15,2,2,5,4,6,5,6,7</item>
+        <item>1,1,1,1,2,2,2,2,3,3</item>
 
         <item>7A+ Benchmark for repeaters,</item>
-        <item>6,6,7,3,2,110,240</item>
-        <item>2,15,2,2,5,4,6,2,6,7,4,6</item>
-        <item>1,1,1,1,2,2,2,2,3,3,3,3</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>2,15,2,2,5,4,6,2,6,7</item>
+        <item>1,1,1,1,2,2,2,2,3,3</item>
 
         <item>7B Benchmark repeaters, two finger grip is tested here</item>
-        <item>6,6,7,3,2,110,240</item>
-        <item>7,12,2,15,4,15,6,7,5,5,9,9</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>7,12,2,15,4,15,5,5,9,9</item>
         <item>1,1,1,1,2,2,2,2,3,3,5,5</item>
 
         <item>7B+ Benchmark repeaters, two finger grip is tested here</item>
-        <item>6,6,7,3,2,100,240</item>
-        <item>7,12,2,15,4,15,6,7,5,5,9,9</item>
-        <item>1,1,1,1,2,2,3,3,3,3,5,5</item>
+        <item>5,6,7,3,2,100,240</item>
+        <item>7,12,2,12,4,15,5,5,9,9</item>
+        <item>1,1,1,1,2,2,3,3,5,5</item>
 
         <item>7C Benchmark repeaters</item>
         <item>6,6,7,3,2,100,180</item>
