--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -352,11 +352,30 @@
         <item>11,11,2,1,15,1,11,2,5,11,11,15,11,11,9,13,14,8,13,13,8,9,7,7</item>
         <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3,4,4,5,5,5,5,6,6,8,8,</item>
 
-
         <item>8C Benchmark for repeaters and mastering all grips!</item>
         <item>10,6,7,3,1,80,1</item>
         <item>1,1,5,2,11,2,9,13,14,13,9,9,12,7,12,12,7,7,7,7</item>
         <item>1,1,2,2,3,3,4,4,5,5,6,6,7,7,8,8,9,9,10,10</item>
+
+        <item>Test your sloper game, progress from easy to infamous 45 degree hold</item>
+        <item>25,1,10,0,1,50,1</item>
+        <item>3,3,6,3,3,6,15,3,3,15,11,3,3,11,6,2,2,6,15,2,2,15,11,2,2,11,2,2,3,1,1,3,6,1,1,6,15,1,1,15,11,1,1,11,2,1,1,2,1,1</item>
+        <item>1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1</item>
+
+        <item>7A Frankenjura prep vol 1, three finger grips only</item>
+        <item>22,1,10,0,1,50,1</item>
+        <item>4,6,6,4,6,10,10,6,6,15,15,6,4,11,11,4,5,6,6,5,15,6,6,15,10,11,11,10,6,5,5,6,11,11,5,11,11,5,11,11,5,11,11,5</item>
+        <item>2,2,2,2,3,3,3,3,2,2,2,2,3,3,3,3,2,2,2,2,3,3,3,3,2,2,2,2,3,3,3,3,2,2,3,3,3,3,3,3,2,2,2,2</item>
+
+        <item>7B+ Frankenjura prep vol 2, nasty pockets only</item>
+        <item>12,1,10,0,1,50,1</item>
+        <item>8,8,8,9,9,8,8,8,9,9,8,9,9,8,9,9,13,8,8,13,13,9,9,13</item>
+        <item>5,5,5,5,5,5,4,4,5,5,4,4,4,4,5,5,4,4,4,4,4,4,4,4</item>
+
+        <item>8A Frankenjura prep vol 3, nasty pockets only</item>
+        <item>15,1,10,0,1,50,1</item>
+        <item>9,9,13,13,8,13,13,8,8,8,13,13,9,9,7,7,8,14,14,8,7,7,13,8,8,13,7,12,12,7</item>
+        <item>4,4,5,5,4,4,4,4,6,6,4,4,4,4,8,8,5,5,5,5,7,7,6,6,6,6,8,8,8,8</item>
 
     </string-array>
 
@@ -380,33 +399,58 @@
 
         <item>6A Benchmark (Single hangs)</item>
         <item>7,1,10,0,3,50,120</item>
-        <item>6,5,2,2,6,4,4,4,2,4,4,2,2,2</item>
+        <item>2,5,5,2,4,5,5,4,4,6,6,4,2,2</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3</item>
+
+        <item>6A+ Benchmark (Single hangs)</item>
+        <item>7,1,10,0,3,45,120</item>
+        <item>2,9,9,2,4,5,5,4,4,6,6,4,2,2</item>
         <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3</item>
 
         <item>6B Benchmark (Single hangs)</item>
         <item>7,1,10,0,3,45,100</item>
-        <item>5,5,4,7,7,4,4,5,5,4,2,4,4,2</item>
+        <item>5,9,9,5,5,5,4,9,9,4,4,5,5,4</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6B+ Benchmark (Single hangs)</item>
+        <item>7,1,10,0,3,40,100</item>
+        <item>5,7,7,5,5,5,4,9,9,4,4,5,5,4</item>
         <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
 
         <item>6C Benchmark (Single hangs)</item>
         <item>8,1,10,0,3,40,100</item>
-        <item>11,2,2,11,2,2,11,5,5,11,4,11,11,4,8,8</item>
-        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3,5,5</item>
+        <item>8,9,9,8,7,8,8,7,7,4,4,7,5,9,9,5</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6C+ Benchmark (Single hangs)</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>8,9,9,8,7,8,8,7,8,4,4,8,5,7,7,5</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
 
         <item>7A Benchmark (Single hangs)</item>
         <item>12,1,10,0,2,40,80</item>
-        <item>2,2,10,1,1,10,15,11,11,15,3,11,11,3,5,11,11,5,8,8,8,9,9,8</item>
-        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3,3,3,3,3,4,4,5,5,5,5</item>
+        <item>8,8,5,8,8,5,7,9,9,7,4,8,8,4,9,5,5,9,6,2,2,6,2,2</item>
+        <item>1,1,2,2,2,2,2,2,2,2,3,3,3,3,3,3,3,3,4,4,4,4,5,5</item>
+
+        <item>7A+ Benchmark (Single hangs)</item>
+        <item>12,1,10,0,2,35,80</item>
+        <item>8,8,5,8,8,5,7,9,9,7,4,8,8,4,7,5,5,7,6,2,2,6,2,2</item>
+        <item>1,1,2,2,2,2,2,2,2,2,3,3,3,3,3,3,3,3,4,4,4,4,5,5</item>
 
         <item>7B Benchmark (Single hangs)</item>
         <item>9,1,10,0,3,35,80</item>
-        <item>2,2,11,11,11,15,15,11,8,9,9,8,8,13,13,8,8,8</item>
-        <item>1,1,2,2,3,3,3,3,4,4,4,4,5,5,5,5,6,6</item>
+        <item>7,8,8,7,9,7,7,9,8,7,7,8,2,6,6,2,4,4</item>
+        <item>2,2,2,2,3,3,3,3,3,3,3,3,4,4,4,4,5,5</item>
+
+        <item>7B+ Benchmark (Single hangs)</item>
+        <item>9,1,10,0,3,30,80</item>
+        <item>7,7,7,8,8,7,7,7,8,7,7,8,2,6,6,2,4,4</item>
+        <item>2,2,2,2,2,2,3,3,3,3,3,3,4,4,4,4,5,5</item>
 
         <item>7C Benchmark (Single hangs)</item>
-        <item>9,1,10,0,3,30,60</item>
-        <item>2,1,1,2,11,2,2,11,11,11,9,9,13,13,8,9,9,8</item>
-        <item>1,1,1,1,2,2,2,2,3,3,4,4,5,5,6,6,6,6</item>
+        <item>9,1,10,0,3,30,80</item>
+        <item>8,8,8,8,8,8,8,8,4,4,4,5,5,4,6,2,2,6</item>
+        <item>2,2,2,2,3,3,3,3,4,4,5,5,5,5,6,6,6,6</item>
 
         <item>5B Benchmark for repeaters</item>
         <item>3,6,7,3,3,150,300</item>
