--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,8 +33,8 @@
     <string name="long_rest_info">Long rest time between Sets</string>
     <string name="cancel">Cancel</string>
     <string name="apply">Apply</string>
-    <string name="save_preferences">Save preferences</string>
-    <string name="load_preferences">Load preferences</string>
+    <string name="save_preferences">Save time controls</string>
+    <string name="load_preferences">Load time controls</string>
     <string name="scaled_line_explanation">Scaled Bars scales four important workout variables
         (Intensity, Average Difficulty, Workload, Power) between 0-1. Zero being the minimum value found
     in workouts and one being the maximum. With this information we can observe how increasing one variable affects
