Removed unneeded Logook button. It is in ActionBar instead.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="save_workout_to_database">Save workout to database</string>
     <string name="update_workout_to_database">Update workout to database</string>
     <string name="hangboard_image">Hangboard image</string>
-    <string name="time_controls">Settings</string>
+    <string name="time_controls">Time Controls</string>
     <string name="new_workout">New 5A\nWorkout</string>
     <string name="start_workout">Start</string>
     <string name="workout_history">Logbook</string>
