--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -627,6 +627,13 @@
 
     </string-array>
 
+    <string-array name="tension_pro_benchmarks">
+        <item>5C Benchmark</item>
+        <item>Four finger grip only</item>
+        <item>4,1,10,0,3,50,120</item>
+        <item>6,2,2,2,6,4,4,4</item>
+        <item>1,1,1,1,1,1,1,1</item>
+    </string-array>
 
     <string-array name="zlag_benchmarks">
 
@@ -853,6 +860,14 @@
         <item>1,1,1,1,1,1,1,1,1,1,1,1</item>
     </string-array>
 
+    <string-array name="meto_wood_deluxe_benchmarks">
+        <item>no programs</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,6,7,3,150,360</item>
+        <item>1,1,1,1,1,1,1,1,1,1,1,1</item>
+        <item>1,1,1,1,1,1,1,1,1,1,1,1</item>
+    </string-array>
+
     <string-array name="drcc_benchmarks">
         <item>no programs</item>
         <item>Grips &amp; Grades test</item>
@@ -1020,6 +1035,22 @@
         <item>12,12,1,1,9,9,8,8,4,5,5,6</item>
         <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
 
+    </string-array>
+
+    <string-array name="matrix_benchmarks">
+        <item>no programs</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,6,7,3,150,360</item>
+        <item>1,1,1,1,1,1,1,1,1,1,1,1</item>
+        <item>1,1,1,1,1,1,1,1,1,1,1,1</item>
+    </string-array>
+
+    <string-array name="core_benchmarks">
+        <item>no programs</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,6,7,3,150,360</item>
+        <item>1,1,1,1,1,1,1,1,1,1,1,1</item>
+        <item>1,1,1,1,1,1,1,1,1,1,1,1</item>
     </string-array>
 
     <string-array name="soillboost_benchmarks">
